# wtch-crpts

./: .env_example  Cargo.toml  README.md
mock/: coinmarketcap-api.json  cryptocompare-api.json
src/: lib.rs  main.rs
src/app/: api.rs  config.rs  constants.rs  env.rs  errors.rs  input.rs  mod.rs  types.rs
src/app/api/: coinmarketcap.rs  cryptocompare.rs  mod.rs
