[package]
name = "wtch-crpts"
version = "0.1.0"
authors = ["jk <email@jkrause.io>"]
edition = "2018"

[dependencies]
log = "0.4.0"
env_logger = "0.6.0"
clap = "2.31.2"
dotenv = "0.13.0"
cursive = "0.10"
reqwest = "0.9.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
derive_builder = "0.7.0"
